<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DistrictwiseData">

    <TextView
        android:id="@+id/state_name"
        style="@style/HeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/state"
        app:layout_constraintBottom_toTopOf="@+id/state_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/lastUpdated"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/state_last_update_time"
        style="@style/TextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/UpdateTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:textSize="15sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/state_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:contentPadding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/state_last_update_time"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/confirmed"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/state_confirmed_count"
                    style="@style/CountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/count"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/state_confirmed_increase_count"
                    style="@style/CountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/inc_count"
                    android:textColor="@color/red" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                app:layout_constraintStart_toEndOf="@+id/linearLayout1"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/active"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/state_active_count"
                    style="@style/CountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/count"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/state_active_increase_count"
                    style="@style/CountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/inc_count"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered"
                    android:textColor="@color/green" />

                <TextView
                    android:id="@+id/state_recovered_count"
                    style="@style/CountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/count"
                    android:textColor="@color/green" />

                <TextView
                    android:id="@+id/state_recovered_increase_count"
                    style="@style/CountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/inc_count"
                    android:textColor="@color/green" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout3"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deceased"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/state_deceased_count"
                    style="@style/CountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/count"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/state_deceased_increase_count"
                    style="@style/CountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/inc_count"
                    android:textColor="@color/gray" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        style="@style/HeadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/districtwise"
        app:layout_constraintTop_toBottomOf="@id/state_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/district_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        android:layout_marginTop="5dp"
        android:paddingBottom="200dp">

    </androidx.recyclerview.widget.RecyclerView>




</androidx.constraintlayout.widget.ConstraintLayout>